# kiosker-ha

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  .release-please-config.json  AGENTS.md  CHANGELOG.md  Makefile  README.md  hacs.json  mkdocs.yml  package.json  pyproject.toml  wrangler.toml  zensical.toml
.github/: issue-labeler.yml  labeler.yml
.github/workflows/: bandit.yml  claude-code-review.yml  cleanup-draft-releases.yml  codeql.yml  dependency-review.yml  issue-triage.yml  release-please.yml  scorecard.yml  scorecards.yml  stale.yml  tests.yml  trigger-docs-sync.yml  zizmor.yml
custom_components/kiosker/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  exceptions.py  manifest.json  sensor.py  services.yaml
custom_components/kiosker/translations/: en.json
docs/: .meta.yml  404.md  api-optimization.md  changelog.md  configuration.md  contributing.md  development.md  device-data.md  entities.md  faq.md  getting-started.md  index.md  installation.md  naming-conventions.md  robots.txt
docs/includes/: abbreviations.md
docs/javascripts/: extra.js  mathjax.js  seo.js
docs/stylesheets/: extra.css
scripts/: develop  generate_docs.py  setup
tests/: conftest.py  test_buttons.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_entities.py  test_init.py  test_services.py
